Fix Java 8 compatibility: revert Stream.toList, replace Set.of/failedFuture
CI compiles on Java 8. Revert the two Sonar S6204 Stream.toList() changes
back to Collectors.toList() (toList is Java 16+), and replace Set.of /
CompletableFuture.failedFuture in the new tests with Guava ImmutableSet and
a local failedFuture helper. S6204 is won't-fix on this toolchain.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>