@@ -27,6 +27,7 @@ import java.util.Set;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.ExecutorService;
+import java.util.stream.Collectors;
 import javax.annotation.Nonnull;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.commons.lang3.StringUtils;
@@ -212,7 +213,9 @@ public class TableDiscoveryService {
                             }
 
                             List<File> directories =
-                                listedFiles.stream().filter(File::isDirectory).toList();
+                                listedFiles.stream()
+                                    .filter(File::isDirectory)
+                                    .collect(Collectors.toList());
                             List<CompletableFuture<Void>> recursiveFutures = new ArrayList<>();
                             for (File file : directories) {
                               String filePath =
